--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongodb": "^6.15.0",
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.1",
